WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290225
REGRESSION(
290813@main
) [Cocoa] Videos on bleacherreport.com are muted.
https://bugs.webkit.org/show_bug.cgi?id=290225
Summary
REGRESSION(290813@main) [Cocoa] Videos on bleacherreport.com are muted.
Jer Noble
Reported
2025-03-21 17:20:24 PDT
REGRESSION(
290813@main
) [Cocoa] Videos on bleacherreport.com are muted.
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-03-21 17:20:25 PDT
<
rdar://problem/147271449
>
Jer Noble
Comment 2
2025-03-24 08:34:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42860
EWS
Comment 3
2025-03-25 08:53:11 PDT
Committed
292648@main
(39c8c2804ca0): <
https://commits.webkit.org/292648@main
> Reviewed commits have been landed. Closing PR #42860 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug