REGRESSION(290813@main) [Cocoa] Videos on bleacherreport.com are muted. rdar://147271449 https://bugs.webkit.org/show_bug.cgi?id=290225

Reviewed by Eric Carlson.

In 290813@main, an AVAssetTrack was always added to AVTrackPrivateAVFObjCImpl when
that object was created with an AVMediaSelectionGroup/Option. But because a number
of the functions in AVTrackPrivateAVFObjCImpl check first for the presence of an
AVAssetTrack, this caused a change in behavior where those AudioTracks created with
an AVMediaSelectionGroup/Option no longer had a language.

Reverse the if() check to check for a mediaSelectionOption before an assetTrack.

* LayoutTests/http/tests/media/hls/hls-audio-tracks-language-expected.txt: Added.
* LayoutTests/http/tests/media/hls/hls-audio-tracks-language.html: Added.
* Source/WebCore/platform/graphics/avfoundation/AVTrackPrivateAVFObjCImpl.mm:
(WebCore::AVTrackPrivateAVFObjCImpl::audioKind const):
(WebCore::AVTrackPrivateAVFObjCImpl::videoKind const):
(WebCore::AVTrackPrivateAVFObjCImpl::textKind const):
(WebCore::AVTrackPrivateAVFObjCImpl::index const):
(WebCore::AVTrackPrivateAVFObjCImpl::id const):
(WebCore::AVTrackPrivateAVFObjCImpl::label const):
(WebCore::AVTrackPrivateAVFObjCImpl::language const):

Canonical link: https://commits.webkit.org/292648@main